fixing overflow

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ input[type=number] {
 body, html{
     min-width: 390px;
     width: 100vw;
+    max-width: 100%;
     
 }
 
